# mimc-cpp-sdk

./: .gitignore  BUILD  CHANGELOG.md  CMakeLists_Android.txt  CMakeLists_Ios.txt  CMakeLists_Linux.txt  CMakeLists_Liteos.txt  CMakeLists_Mips.txt  CMakeLists_Test.txt  CMakeLists_X86.txt  README.md  build.sh  build_android.sh  build_ios.sh  build_linux.sh  build_liteos.sh  build_mips.sh  build_test.sh  build_x86.sh  compile_version_info.sh  mimc-cpp-sdk.vcxproj  mimc-cpp-sdk.vcxproj.filters  mimc.sln  version.h
mimc-cpp-sdk/: BUILD  CMakeLists.txt
mimc-cpp-sdk/demo/: mimc_demo.cpp
mimc-cpp-sdk/include/mimc/: connection.h  mimcmessage.h  onlinestatus_handler.h  packet_manager.h  threadsafe_queue.h
mimc-cpp-sdk/msg-libs/crypto/: BUILD
mimc-cpp-sdk/msg-libs/gtestx/: BUILD
mimc-cpp-sdk/src/: control_message.pb.cc  ims_push_service.pb.cc  mimc-cpp-sdk.properties  packet_manager.cpp  user.cpp  utils.cpp
msg-libs/xmdtransceiver/: BUILD  CMakeLists.txt  CMakeLists_Android.txt  CMakeLists_Ios.txt  CMakeLists_Liteos.txt  CMakeLists_Mips.txt  CMakeLists_X86.txt  build.sh  build_Ios.sh  build_all.sh  build_android.sh  build_liteos.sh  build_mips.sh  xmdtransceiver.sln  xmdtransceiver.vcxproj  xmdtransceiver.vcxproj.filters
msg-libs/xmdtransceiver/include/: ExternalLog.h  NetStatusChangeHandler.h  PacketBuilder.h  PacketCallback.h  PacketDispatcher.h  PacketRecover.h  PingThread.h  PongThread.h  StreamHandler.h  Timer.h  XMDCallbackThread.h  XMDCommonData.h  XMDDecodeThread.h  XMDLoggerWrapper.h  XMDPacket.h  XMDPacketBuildThread.h  XMDPacketBuildThreadPool.h  common.h  (+14 more)
(+247 files in other folders)
