cmake_minimum_required(VERSION 3.8)
project(mimc_cpp_sdk)
set(CMAKE_CXX_STANTARD 98)
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_CXX_FLAGS "-g -O2 -pthread")
set(THIRDPARTY_LIBRARY_DIRECTORY /home/work/codes/third-party/arm)
include_directories(${PROJECT_SOURCE_DIR}/include ${THIRDPARTY_LIBRARY_DIRECTORY}/include)
aux_source_directory(${PROJECT_SOURCE_DIR}/src LIB_SRC)
add_library(mimc_cpp_sdk ${LIB_SRC})
link_directories(${THIRDPARTY_LIBRARY_DIRECTORY}/lib)
target_link_libraries(mimc_cpp_sdk pthread m jsoncpp z log4cplusS crypto xiaomi-protobuf-messaging xiaomi-mimc protobuf-250)
